--- a/Aimmy2/Aimmy2.csproj
+++ b/Aimmy2/Aimmy2.csproj
@@ -71,6 +71,7 @@
     </PackageReference>
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.17.3" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="MouseKeyHook" Version="5.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Supercluster.KDTree" Version="1.0.4" />
